# off-wechat

./: .gitignore  Cargo.toml  README.md  config.sample.yml
hugo/: config.toml
hugo/data/: index.yml
hugo/pages/: 404.html  index.html  index.xml  sitemap.xml
hugo/pages/categories/: index.xml
hugo/pages/tags/: index.xml
hugo/themes/index/: theme.toml
hugo/themes/index/assets/: style.scss
hugo/themes/index/layouts/: 404.html  index.html
hugo/themes/index/layouts/_default/: rss.xml
hugo/themes/index/layouts/partials/: head.html
pages/: index.yml
src/: main.rs
