[package]
name = "off-wechat"
version = "0.1.0"
authors = ["Ray Xu <megrxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.1.3"
telegram-bot = "0.7"
futures = "0.3.5"
tokio = { version = "0.2", features = ["macros"]}
serde_yaml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }